[package]
name = "chost"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
local-ip-address = "0.5.6"
colored = "2.0.0"
