[package]
name = "chost"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.5", features = ["full"] }
local-ip-address = "0.6.2"
colored = "2.1.0"
